--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -16,7 +17,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYFSOFfx1vA-RGbnTVVSu6pQmqdXu1-hc"></script>
     <script src="js/vendor/gmaps.min.js"></script>
-
+    <script src="js/vendor/bootstrap.js"></script>
     <script src="js/utils/get-json.js"></script>
     <script src="js/utils/filters.js"></script>
     <script src="js/components/header.js"></script>
