--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div class="root"></div>
-
+    <div class="root">
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYFSOFfx1vA-RGbnTVVSu6pQmqdXu1-hc"></script>
+    <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzBaJfskWkf2d3i4PRNATw1h6ssU24Jn0"></script>
     <script src="js/vendor/gmaps.min.js"></script>
     <script src="js/vendor/bootstrap.js"></script>
     <script src="js/utils/get-json.js"></script>
     <script src="js/utils/filters.js"></script>
     <script src="js/components/header.js"></script>
     <script src="js/components/search.js"></script>
+    <script src="js/components/stationDetails.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
